trying to fix flicker
changing menial shit to fix the stupid flickering across website

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(10, 10, 10);
+    background-color: black;
 }
 
 
@@ -120,8 +120,6 @@ nav,
 }
 #preloadedImages
 {
-    width: 0px;
-    height: 0px;
     visibility: hidden;
     display: inline;
     background-image: url(images/atj.png);
